# ActiveObject

examples/calculator/src/: CMakeLists.txt  calculator.cpp  main.cpp
examples/calculator/src/include/: Calculator.hpp  calculator.hpp
include/: activeobject.hpp
